fix h1 size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,10 @@ img{
         margin-top: 60px !important;
     }
 
+    .info h1{
+        font-size: 50px;
+    }
+    
     .info p{
         font-size: 20px;
     }
